@@ -1,3 +1,3 @@
-EBUILD calculate-install-gui-2.2.9999.ebuild 750 RMD160 480cdb99bb7ae7e30538a57bab2cf7ca82064342 SHA1 332dec1dc38db1f0159851dca2d25eb99f743902 SHA256 fdc9195a77fa8788246d59a02fc9455bd18c92a29c0dfeadbcb29aea25ad7a62
-MISC ChangeLog 757 RMD160 8bfb100c0e88205befffbfce653d552976bfba6e SHA1 cda6994393daada564afa0bf485cf70c04a72868 SHA256 8ccccad397d2fc1fd6a99eb4d0f641b41af1ba9e4c8262b862825c3e268d1152
+EBUILD calculate-install-gui-2.2.9999.ebuild 767 RMD160 8de775e300ce57e01dbc5d53a3e73afe2caeb3d7 SHA1 bb3bb6aeab36281fb8448696fb4084eb58f07d76 SHA256 c9c75a0418efc39b6a01fe15a038d0a71fe1ee256ccf50c150fc4b4693939b4c
+MISC ChangeLog 892 RMD160 1d58f082e60eb3c2f11a2d66d43f754746799db9 SHA1 c1e98a217c1d6b9f0585f11455fa8bc6b1885a6c SHA256 c7358ee256a71f6ce39b7d8e272db910edc73d40b7e3becd5194a4975d98698e
 MISC metadata.xml 319 RMD160 c12d856d94a4bbba48275f44c4e9a0eae1ac6f21 SHA1 cddfe781ee5b88c7f5c94d7c5f03a07e61ae3336 SHA256 2a18634b4a257808c269e8c986462b316780c4f8b9a19c7c8b733fa3310a4147
