@@ -15,7 +15,8 @@ SLOT="0"
 KEYWORDS="~amd64 ~x86"
 
 DEPEND="=sys-apps/calculate-install-2.2.9999
-	x11-libs/qtermwidget"
+	x11-libs/qtermwidget
+	sys-apps/parted"
 
 RDEPEND="${DEPEND}"
 
