@@ -1,3 +1,3 @@
 DIST qtermwidget-0.1.tar.gz 170449 RMD160 39d55568e7b7337b0b144b2e8d9de24a11b6304d SHA1 61afa0e48d6eb784f374563db9242af22dbe2d6c SHA256 81be4b07da333a60b3f7362024d8f88a1ca6fb63fb2318424c87bed591f32811
-EBUILD qtermwidget-0.1.ebuild 724 RMD160 f348372c506eed658a2c8515056865b1bd3e6bd6 SHA1 27a3fdf9b9412bf489bf93dbb9c2fd7a278c6cce SHA256 77d616c39850c599df8972c8b1666f41f65f876a59182877878420e920aaadcc
-MISC ChangeLog 257 RMD160 11295f2fb7199d0b1d64a48c23da389d6200202a SHA1 5f820df9d75a8378b081845f045671db47599ee1 SHA256 4b1c12b117a6eddb97548f03df96e8d2bbaf08a4a30c5d7cfb72233a0ff2472f
+EBUILD qtermwidget-0.1.ebuild 723 RMD160 f87c157068a9f317399ce5e9fb6983e83a383709 SHA1 099af741f3d00ae796f37b671af42f735385d29d SHA256 c459b7ce703e4930dc6a43eed8d8c57d1856208cddd1699f99a5696db0fe840b
+MISC ChangeLog 369 RMD160 66cec6802f3c0b8bd0d43dc6691defa17285f2ee SHA1 ef08b1e14560c4ddec0bd7eaa980a11c2100992f SHA256 a700f9030658ed24624ba6d6df4798f460de65222673b468d85800dc4697110d
