@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  28 May 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  qtermwidget-0.1.ebuild:
+  Fix depends of qt-gui.
+
 *qtermwidget-0.1 (27 May 2010)
 
   27 May 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
