@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  28 May 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  calculate-install-gui-2.2.9999.ebuild:
+  Add depent of sys-apps/parted.
+
   27 May 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
   calculate-install-gui-2.2.9999.ebuild:
   Add qtermwidget to dependence.
